Modified heroes attributes and form

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,21 +1,19 @@
-<!-- <router-outlet></router-outlet> -->
 <h2>My Heroes</h2>
 
 <!-- seznam herojev -->
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
-      <span class="badge">{{hero.id}}</span> {{hero.name}}
+      <span class="badge">{{hero.id}}</span> {{hero.name}} | {{hero.age}} years | {{hero.gender}}
     </a>
     <button type="button" class="delete" title="delete hero"
       (click)="delete(hero)">x</button>
   </li>
 </ul>
-<div>
+
+<!-- <div>
   <label for="new-hero">Hero name: </label>
   <input id="new-hero" #heroName />
-
-  <!-- (click) passes input value to add() and then clears the input -->
   <button
     type="button"
     class="add-button"
@@ -23,4 +21,6 @@
   >
     Add hero
   </button>
-</div>
+</div> -->
+
+<app-hero-form></app-hero-form>
