--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -10,7 +10,7 @@ input {
   display: block;
   width: 25%;
   padding: .5rem;
-  margin: 1rem 0;
+  margin: 0 1rem 0 0;
   box-sizing: border-box;
 }
 
@@ -87,4 +87,36 @@ button.delete {
 button.delete:hover {
   background-color: #525252;
   color: white;
+}
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
+
+.alert {
+  background-color: #fed3d3;
+  color: #820000;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  width: 22%;
+}
+
+label {
+  display: block;
+  margin: 1rem 0rem .5rem 0rem;
+}
+
+select {
+  width: 25%;
+  padding: .5rem;
+}
+
+.comp{
+  margin-top: 1rem;
+  margin-bottom: 0;
+  font-size: 12px;
 }
