--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,6 +6,10 @@
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" />
   </div>
+  <div>
+    <label for="hero-name">Hero age: </label>
+    <input id="hero-name" [(ngModel)]="hero.age" placeholder="age" />
+  </div>
 </div>
 <button type="button" (click)="goBack()">Go back</button>
 <button type="button" (click)="save()">Save</button>
