--- a/src/app/shared/components/dropdown/dropdown.component.html
+++ b/src/app/shared/components/dropdown/dropdown.component.html
@@ -1,4 +1,8 @@
-<div class="parent" (click)="dropdownToggle()">{{ label }}</div>
+<div class="parent" (click)="dropdownToggle()">
+  {{ label }} 
+  <fa-icon *ngIf="showDropdown" [icon]="arrowUp"></fa-icon>
+  <fa-icon *ngIf="!showDropdown" [icon]="arrowDown"></fa-icon>
+</div>
 <div class="child" *ngIf="showDropdown">
   <div
     class="opt"
@@ -8,5 +12,3 @@
     {{ option }}
   </div>
 </div>
-
-{{value}}
