--- a/src/app/shared/components/dropdown/dropdown.component.css
+++ b/src/app/shared/components/dropdown/dropdown.component.css
@@ -1,13 +1,19 @@
+div:hover{
+  cursor: pointer;
+}
 .parent{
   border: 1px solid black;
   width: 25%;
   padding: .5rem;
+  margin: 0 1rem 0 0;
+  box-sizing: border-box;
 }
 .child{
   border: 1px solid black;
   width: 25%;
   padding: .5rem;
   border-top: none;
+  box-sizing: border-box;
 }
 .opt{
   padding: .1rem;
@@ -15,4 +21,7 @@
 .opt:hover{
   background-color: #e6e6e6;
   padding: .25rem;
+}
+fa-icon{
+  float: right;
 }
