--- a/src/app/star-wars/star-wars.component.html
+++ b/src/app/star-wars/star-wars.component.html
@@ -1,6 +1,12 @@
-<p>works</p>
-<ul>
-  <li *ngFor="let person of people$ | async">
-    {{ person.id }} | {{ person.name }} | {{ person.height }} cm | {{ person.mass }} kg
-  </li>
-</ul>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Height(cm)</th>
+    <th>Weight(kg)</th>
+  </tr>
+  <tr *ngFor="let person of people$ | async">
+    <td>{{person?.name}}</td>
+    <td>{{person?.height}}</td>
+    <td>{{person?.mass}}</td>
+  </tr>
+</table>
