Sorting by columns.

--- a/src/app/star-wars/star-wars.component.css
+++ b/src/app/star-wars/star-wars.component.css
@@ -1,6 +1,9 @@
 table{
     margin-top: 2rem;
 }
+th{
+  user-select: none;
+}
 table, th , td {
     margin-top: 1 rem;
     border: 1px solid grey;
