--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,11 @@
-<h2>Top Heroes</h2>
-<div class="heroes-menu">
-  <a *ngFor="let hero of heroes"
-      routerLink="/detail/{{hero.id}}">
-      {{hero.name}}
+<h2 class="text-center text-3xl font-bold">Top Heroes</h2>
+<div class="flex flex-row flex-wrap justify-around">
+  <a
+    class="box-content inline-block rounded-md border-2 bg-slate-600 p-4 text-xl text-white"
+    *ngFor="let hero of heroes"
+    routerLink="/detail/{{ hero.id }}"
+  >
+    {{ hero.name }}
   </a>
 </div>
 
