--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,10 +1,15 @@
-<div id="search-component">
-  <label for="search-box">Hero Search</label>
-  <input #searchBox id="search-box" (input)="search(searchBox.value)" />
+<div class="ml-4" id="search-component">
+  <label class="mt-4 ml-4 block text-base font-bold " for="search-box">Hero Search:</label>
+  <input
+    class="mt-2 ml-4 border-2 w-44"
+    #searchBox
+    id="search-box"
+    (input)="search(searchBox.value)"
+  />
 
-  <ul class="search-result">
-    <li *ngFor="let hero of heroes$ | async">
-      <a routerLink="/detail/{{ hero.id }}">
+  <ul class="block ml-4 bg-slate-50 w-44 border p-1 cursor-pointer">
+    <li class="hover:bg-slate-400 p-1" *ngFor="let hero of heroes$ | async" routerLink="/detail/{{ hero.id }}">
+      <a class="select-none">
         {{ hero.name }}
       </a>
     </li>
