--- a/src/app/star-wars/star-wars.component.html
+++ b/src/app/star-wars/star-wars.component.html
@@ -1,4 +1,4 @@
-<div class="relative mt-5 w-1/2 overflow-x-auto shadow-md sm:rounded-lg">
+<div class="relative mt-5 ml-4 w-1/2 overflow-x-auto shadow-md sm:rounded-lg">
   <table class="w-full text-center text-sm text-gray-500 dark:text-gray-400">
     <tr
       class="bg-gray-50 text-xs uppercase text-gray-700 dark:bg-gray-700 dark:text-gray-400"
