Fully switched to tailwind

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="m-0 h-12 w-full bg-slate-500 p-0 align-baseline">
-  <h1 class="inline-block h-12 pl-8 w-1/2 font-sans text-3xl font-bold ">
+  <h1
+    class="inline-block h-12 w-1/2 select-none pl-8 font-sans text-3xl font-bold"
+    routerLink="/dashboard"
+  >
     {{ title }}
   </h1>
   <nav class="inline-block h-12 w-1/2 text-right">
