--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,15 +1,18 @@
-<h2>My Heroes</h2>
+<h2 class="mt-2 ml-4 text-xl font-bold">My Heroes</h2>
 
-<!-- seznam herojev -->
-<ul class="heroes">
-  <li *ngFor="let hero of heroes$ | async">
-    <a routerLink="/detail/{{ hero.id }}">
-      <span class="badge">{{ hero.id }}</span> {{ hero.name }} |
-      {{ hero.age }} years | {{ hero.gender }}
+<ul class="mt-4 ml-4">
+  <li
+    class="h-8 w-96 mt-2 rounded-md border bg-slate-300"
+    *ngFor="let hero of heroes$ | async"
+  >
+    <a class="align-baseline" routerLink="/detail/{{ hero.id }}">
+      <p class="ml-1 inline h-full align-baseline text-slate-500">
+        {{ hero.id }} |
+      </p>
+      {{ hero.name }} | {{ hero.age }} years | {{ hero.gender }}
     </a>
     <button
-      type="button"
-      class="delete"
+      class="float-right h-8 w-8 align-baseline rounded-md border-slate-700 bg-slate-500 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
       title="delete hero"
       (click)="delete(hero)"
     >
@@ -18,26 +21,68 @@
   </li>
 </ul>
 
-<form [formGroup]="heroForm" (ngSubmit)="add()">
-  <label for="hero-name">Hero Name*: </label>
-  <input onClick="select()" id="hero-name" type="text" formControlName="name" required placeholder="Wingman"/>
-  <div *ngIf="name?.invalid && (name?.dirty || name?.touched)"
-    class="alert alert-danger">
-    <div *ngIf="name?.errors?.['required']">
+<form class="mt-4 ml-4" [formGroup]="heroForm" (ngSubmit)="add()">
+  <label class="block" for="hero-name">Hero Name*: </label>
+  <input
+    class="w-52 appearance-none rounded border-2 border-gray-200 bg-gray-200 py-2 px-4 leading-tight text-gray-700 focus:border-slate-500 focus:bg-white focus:outline-none"
+    onClick="select()"
+    id="hero-name"
+    type="text"
+    formControlName="name"
+    required
+    placeholder="Wingman"
+  />
+  <div
+    *ngIf="name?.invalid && (name?.dirty || name?.touched)"
+    class="alert alert-danger"
+  >
+    <div
+      class="relative w-52 rounded border border-red-400 bg-red-100 px-4 py-3 text-red-700"
+      *ngIf="name?.errors?.['required']"
+    >
       Name is required.
     </div>
   </div>
-    <div class="alert alert-danger" *ngIf=" name?.valid && age?.valid && heroForm.invalid">
-      The name is already taken.
-    </div>
+  <div
+    class="relative w-52 rounded border border-red-400 bg-red-100 px-4 py-3 text-red-700"
+    *ngIf="name?.valid && age?.valid && heroForm.invalid"
+  >
+    The name is already taken.
+  </div>
 
-  <label for="age">Age*: </label>
-  <input onClick="select()" id="age" type="text" formControlName="age" required placeholder="20"/>
-  <div *ngIf="age?.invalid && (age?.dirty || age?.touched)" class="alert" >The age must be 0 or higher.</div>
+  <label class="mt-4 block" for="age">Age*: </label>
+  <input
+    class="w-52 appearance-none rounded border-2 border-gray-200 bg-gray-200 py-2 px-4 leading-tight text-gray-700 focus:border-slate-500 focus:bg-white focus:outline-none"
+    onClick="select()"
+    id="age"
+    type="text"
+    formControlName="age"
+    required
+    placeholder="20"
+  />
+  <div
+    *ngIf="age?.invalid && (age?.dirty || age?.touched)"
+    class="relative w-52 rounded border border-red-400 bg-red-100 px-4 py-3 text-red-700"
+  >
+    The age must be 0 or higher.
+  </div>
 
-  <label for="gender">Gender: </label>
-  <app-dropdown [label]="'Choose gender'" [options]="['Male','Female','Other']" formControlName="gender"></app-dropdown>
+  <label class="mt-4 block" for="gender">Gender: </label>
+  <app-dropdown
+    [label]="'Choose gender'"
+    [options]="['Male', 'Female', 'Other']"
+    formControlName="gender"
+  ></app-dropdown>
 
-  <p class="comp">Complete the fields with a "*" to enable button.</p>
-  <button id="submit" type="submit" [disabled]="!heroForm.valid">Add hero</button>
+  <p class="m-2 ml-0 text-sm">
+    Complete the fields with a "*" to enable button.
+  </p>
+  <button
+    class="ml-10 rounded border-b-4 border-slate-700 bg-slate-500 py-2 px-4 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
+    id="submit"
+    type="submit"
+    [disabled]="!heroForm.valid"
+  >
+    Add hero
+  </button>
 </form>
