--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,7 +1,7 @@
 <div class="mt-4 ml-4" *ngIf="messageService.messages.length">
   <h2 class="font-bold text-red-500">Messages</h2>
   <button
-    class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
+    class="rounded border-b-4 border-slate-700 bg-slate-500 py-2 px-4 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
     (click)="messageService.clear()"
   >
     Clear messages
