--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -11,7 +11,7 @@
 
   <ul
     *ngIf="searchBox.value !== ''"
-    class="ml-4 block w-44 cursor-pointer border bg-slate-50 p-1"
+    class="block w-44 cursor-pointer border bg-slate-50 p-1"
   >
     <li
       class="p-1 hover:bg-slate-400"
