--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="mt-4 flex flex-row flex-wrap justify-center">
   <a
     class="mr-4 box-content inline-block rounded-md bg-slate-500 p-4 text-xl text-white hover:bg-slate-600"
-    *ngFor="let hero of heroes"
+    *ngFor="let hero of heroes$ | async"
     routerLink="/detail/{{ hero.id }}"
   >
     {{ hero.name }}
