--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4 ml-4" *ngIf="hero">
+<div class="mt-4 ml-4" *ngIf="hero$ | async as hero">
   <h2 class="text-xl font-bold">{{ hero.name | uppercase }} Details</h2>
   <div>id: {{ hero.id }}</div>
   <div class="mt-2">
@@ -29,7 +29,7 @@
   </button>
   <button
     class="mr-2 rounded border-b-4 border-slate-700 bg-slate-500 py-2 px-4 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
-    (click)="save()"
+    
   >
     Save
   </button>
