--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,36 +1,49 @@
 <div class="mt-4 ml-4" *ngIf="hero$ | async as hero">
   <h2 class="text-xl font-bold">{{ hero.name | uppercase }} Details</h2>
-  <div>id: {{ hero.id }}</div>
-  <div class="mt-2">
-    <label class="text-right" for="hero-name">Hero name: </label>
+  <form class="mt-4 ml-4" [formGroup]="heroDetailForm">
+    <label class="block" for="hero-name">ID: </label>
     <input
-      class="border-2"
-      id="hero-name"
-      [(ngModel)]="hero.name"
-      placeholder="name"
+      class="pointer-events-none w-52 appearance-none rounded border-2 border-gray-200 bg-gray-200 py-2 px-4 leading-tight text-gray-700 focus:border-slate-500 focus:bg-white focus:outline-none"
+      id="id"
+      type="text"
+      formControlName="id"
+      placeholder= {{hero.id}}
     />
-  </div>
-  <div class="mt-2">
-    <label class="text-right" for="hero-name">Hero age: </label>
+
+    <label class="mt-4 block" for="hero-name">Hero Name: </label>
     <input
-      class="border-2"
+      class="w-52 appearance-none rounded border-2 border-gray-200 bg-gray-200 py-2 px-4 leading-tight text-gray-700 focus:border-slate-500 focus:bg-white focus:outline-none"
+      onClick="select()"
       id="hero-name"
-      [(ngModel)]="hero.age"
-      placeholder="age"
+      type="text"
+      formControlName="name"
+      required
     />
-  </div>
-</div>
-<div class="mt-4 ml-4">
-  <button
-    class="mr-2 rounded border-b-4 border-slate-700 bg-slate-500 py-2 px-4 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
-    (click)="goBack()"
-  >
-    Go back
-  </button>
-  <button
-    class="mr-2 rounded border-b-4 border-slate-700 bg-slate-500 py-2 px-4 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
-    
-  >
-    Save
-  </button>
+
+    <label class="mt-4 block" for="age">Age: </label>
+    <input
+      class="w-52 appearance-none rounded border-2 border-gray-200 bg-gray-200 py-2 px-4 leading-tight text-gray-700 focus:border-slate-500 focus:bg-white focus:outline-none"
+      onClick="select()"
+      id="age"
+      type="text"
+      formControlName="age"
+      required
+    />
+    <div class="mt-4 block">
+      <button
+        class="mr-2 inline-block rounded border-b-4 border-slate-700 bg-slate-500 py-2 px-4 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
+        (click)="goBack()"
+      >
+        Go back
+      </button>
+      <button
+        class="inline-block rounded border-b-4 border-slate-700 bg-slate-500 py-2 px-4 font-bold text-white hover:border-slate-500 hover:bg-slate-400"
+        id="submit"
+        (click)="save()"
+        [disabled]="!heroDetailForm.valid"
+      >
+        Save
+      </button>
+    </div>
+  </form>
 </div>
